modified:   blather.sh 	modified:   config/commands.conf 	modified:   config/options.yaml

--- a/config/commands.conf
+++ b/config/commands.conf
@@ -25,8 +25,8 @@
 #   export GST_PLUGIN_PATH=/usr/local/lib/gstreamer-0.10
 #   export VOICE="/usr/bin/espeak"
 #   export PLUGINS="/home/rizzo/blather/config/plugins"
-#   export CONFIGDIR="/home/$(whoami)/blather/config"
-#   export CLIP="/home/$(whoami)/.local/share/clipit/history"
+#   export CONFIGDIR="$HOME/blather/config"
+#   export CLIP="$HOME/.local/share/clipit/history"
 #   #export KEYPRESS="xvkbd -xsendevent -secure -text"
 #   export KEYPRESS="xdotool key"
 #   export KEYHOLD="xdotool keydown"
@@ -64,16 +64,16 @@
 # HAL:keyword
 
 # ------- Blather Maintenance -------- #
-KILL BLADDER: /home/$(whoami)/blather/config/plugins/stoplistening.sh
-QUIT BLADDER: /home/$(whoami)/blather/config/plugins/stoplistening.sh
+KILL BLADDER: $HOME/blather/config/plugins/stoplistening.sh
+QUIT BLADDER: $HOME/blather/config/plugins/stoplistening.sh
 
-RESTART BLADDER: /home/$(whoami)/blather/config/plugins/stoplistening.sh && blather &
-UPDATE BLADDER CONFIG: /home/$(whoami)/blather/config/plugins/stoplistening.sh && blather &
-UPDATE CONFIG: /home/$(whoami)/blather/config/plugins/stoplistening.sh && blather &
-UPDATE BLADDER: /home/$(whoami)/blather/config/plugins/stoplistening.sh && blather &
-# OPEN BLADDER CONFIG FILE: $EDITOR /home/$(whoami)/blather/config/commands.conf && echo "opening blather config file" | $VOICE &
-# OPEN BLADDER CONFIG: $EDITOR /home/$(whoami)/blather/config/commands.conf && echo "opening blather config file" | $VOICE &
-# BLADDER CONFIG DERR: $KEYTYPE 'cd /home/$(whoami)/blather/config' && $KEYPRESS Return &
+RESTART BLADDER: $HOME/blather/config/plugins/stoplistening.sh && blather &
+UPDATE BLADDER CONFIG: $HOME/blather/config/plugins/stoplistening.sh && blather &
+UPDATE CONFIG: $HOME/blather/config/plugins/stoplistening.sh && blather &
+UPDATE BLADDER: $HOME/blather/config/plugins/stoplistening.sh && blather &
+# OPEN BLADDER CONFIG FILE: $EDITOR $HOME/blather/config/commands.conf && echo "opening blather config file" | $VOICE &
+# OPEN BLADDER CONFIG: $EDITOR $HOME/blather/config/commands.conf && echo "opening blather config file" | $VOICE &
+# BLADDER CONFIG DERR: $KEYTYPE 'cd $HOME/blather/config' && $KEYPRESS Return &
 # NEW SECTION LABEL: $KEYPRESS Control+c && $KEYTYPE "# ----------- " && $KEYPRESS Control+v && $KEYTYPE " ------------ #" &
 # SECTION LABEL: $KEYPRESS Control+c && $KEYTYPE "# ----------- " && $KEYPRESS Control+v && $KEYTYPE " ------------ #" &
 ECHO VOICE: $KEYTYPE 'echo "" | $VOICE' && $KEYPRESS Left Left Left Left Left Left Left Left Left Left &
@@ -102,9 +102,9 @@ WHAT IS YOUR UP TIME: UP=$(uptime -p) && echo "according to my uptime logs i've 
 ADD CONFIRM: $KEYTYPE '& echo "yes sir." | $VOICE &' &
 ADD CONFIRMATION: $KEYTYPE '& echo "yes sir." | $VOICE &' &
 
-OPEN NOTES: $EDITOR "/home/$(whoami)/Documenten/notes.txt"  &
-OPEN TODO: $EDITOR "/home/$(whoami)/Documenten/notes.txt" &
-MAKE NOTE: $EDITOR "/home/$(whoami)/Documenten/notes.txt" &
+OPEN NOTES: $EDITOR "$HOME/Documenten/notes.txt"  &
+OPEN TODO: $EDITOR "$HOME/Documenten/notes.txt" &
+MAKE NOTE: $EDITOR "$HOME/Documenten/notes.txt" &
 
 
 # Command to display the current coordinates of the mouse. Useful
